--- a/CountAll/Base.lproj/Main.storyboard
+++ b/CountAll/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="TaC-25-Cl8">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CountAll" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,137 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EbT-W6-tEs">
+                                <rect key="frame" x="0.0" y="20" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="K0q-R6-cCD">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="K0q-R6-cCD" id="NzP-Vg-Kdm">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="i1U-K5-ANt" kind="show" identifier="detailsViewSegue" id="l4d-r1-ylW"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="jl7-TA-9ai"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="grl-iS-RJi"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="EbT-W6-tEs" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="1iE-fG-43h"/>
+                            <constraint firstItem="EbT-W6-tEs" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="NiC-g1-2Wb"/>
+                            <constraint firstAttribute="trailing" secondItem="EbT-W6-tEs" secondAttribute="trailing" id="gLa-0j-OFd"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="EbT-W6-tEs" secondAttribute="bottom" id="kbL-SA-yvx"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="ZPl-Th-sLN">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="dJk-tR-f0y">
+                            <connections>
+                                <segue destination="hvD-Lp-KmK" kind="show" id="Yw9-Ft-2Ml"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="964" y="36.431784107946029"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="9wM-pp-bvx">
+            <objects>
+                <viewController id="hvD-Lp-KmK" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="USS-nA-DGu"/>
+                        <viewControllerLayoutGuide type="bottom" id="F9Q-fa-GET"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Cql-o6-uN2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="e.g. Number of burgers you eaten" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9XB-Rg-RC7">
+                                <rect key="frame" x="16" y="201" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tell us what you want to count" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Au2-Jk-ha0">
+                                <rect key="frame" x="16" y="172" width="343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="9XB-Rg-RC7" firstAttribute="leading" secondItem="Cql-o6-uN2" secondAttribute="leadingMargin" id="LSd-bv-G6H"/>
+                            <constraint firstItem="Au2-Jk-ha0" firstAttribute="leading" secondItem="Cql-o6-uN2" secondAttribute="leadingMargin" id="RYS-Tm-Gey"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Au2-Jk-ha0" secondAttribute="trailing" id="UEs-yG-pbv"/>
+                            <constraint firstItem="9XB-Rg-RC7" firstAttribute="top" secondItem="Au2-Jk-ha0" secondAttribute="bottom" constant="8" symbolic="YES" id="Ub1-9f-DoY"/>
+                            <constraint firstItem="9XB-Rg-RC7" firstAttribute="trailing" secondItem="Cql-o6-uN2" secondAttribute="trailingMargin" id="fsn-St-hpY"/>
+                            <constraint firstItem="9XB-Rg-RC7" firstAttribute="top" secondItem="USS-nA-DGu" secondAttribute="bottom" constant="137" id="fyv-OO-gHy"/>
+                        </constraints>
+                    </view>
+                    <toolbarItems>
+                        <barButtonItem systemItem="cancel" id="GfY-db-AfE">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" id="Xdn-sh-z4E"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="vug-va-eyi"/>
+                        <barButtonItem systemItem="done" id="7XD-e9-yaJ"/>
+                    </toolbarItems>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Afu-rH-JlP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1197.5999999999999" y="711.99400299850083"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="See-af-0X4">
+            <objects>
+                <viewController id="i1U-K5-ANt" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Wck-eG-mBS"/>
+                        <viewControllerLayoutGuide type="bottom" id="Rc7-sw-viv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fxq-zg-3vo">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Stj-lr-mpS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1637.5999999999999" y="29.23538230884558"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="alv-eh-lDd">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TaC-25-Cl8" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2kv-og-Vh7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="9Pv-ag-T5r"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g3D-L3-pUh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="277.60000000000002" y="683.20839580209895"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="Xdn-sh-z4E"/>
+    </inferredMetricsTieBreakers>
 </document>
