--- a/CountAll/Base.lproj/Main.storyboard
+++ b/CountAll/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EbT-W6-tEs">
-                                <rect key="frame" x="0.0" y="20" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="K0q-R6-cCD">
@@ -64,10 +64,10 @@
             </objects>
             <point key="canvasLocation" x="964" y="36.431784107946029"/>
         </scene>
-        <!--View Controller-->
+        <!--Add View Controller-->
         <scene sceneID="9wM-pp-bvx">
             <objects>
-                <viewController id="hvD-Lp-KmK" sceneMemberID="viewController">
+                <viewController id="hvD-Lp-KmK" customClass="AddViewController" customModule="CountAll" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="USS-nA-DGu"/>
                         <viewControllerLayoutGuide type="bottom" id="F9Q-fa-GET"/>
@@ -88,6 +88,19 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IOA-MV-Jvt">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem systemItem="cancel" id="dDG-7d-fmc"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="t6j-YS-JNS"/>
+                                    <barButtonItem systemItem="done" id="vwK-Mr-IO0">
+                                        <connections>
+                                            <action selector="addNewObject:" destination="hvD-Lp-KmK" id="1EX-hF-tFa"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -99,16 +112,11 @@
                             <constraint firstItem="9XB-Rg-RC7" firstAttribute="top" secondItem="USS-nA-DGu" secondAttribute="bottom" constant="137" id="fyv-OO-gHy"/>
                         </constraints>
                     </view>
-                    <toolbarItems>
-                        <barButtonItem systemItem="cancel" id="GfY-db-AfE">
-                            <connections>
-                                <segue destination="BYZ-38-t0r" kind="show" id="Xdn-sh-z4E"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="vug-va-eyi"/>
-                        <barButtonItem systemItem="done" id="7XD-e9-yaJ"/>
-                    </toolbarItems>
+                    <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="objectName" destination="9XB-Rg-RC7" id="Lm4-Lc-dpa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Afu-rH-JlP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -151,7 +159,4 @@
             <point key="canvasLocation" x="277.60000000000002" y="683.20839580209895"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="Xdn-sh-z4E"/>
-    </inferredMetricsTieBreakers>
 </document>
