reload data for table

--- a/CountAll/Base.lproj/Main.storyboard
+++ b/CountAll/Base.lproj/Main.storyboard
@@ -59,6 +59,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="table" destination="EbT-W6-tEs" id="Ov8-2Y-cLW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
