--- a/CountAll/Base.lproj/Main.storyboard
+++ b/CountAll/Base.lproj/Main.storyboard
@@ -10,10 +10,63 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Add Amount View Controller-->
+        <scene sceneID="qyb-e1-cji">
+            <objects>
+                <viewController modalTransitionStyle="crossDissolve" modalPresentationStyle="overCurrentContext" id="NBJ-fi-8JN" customClass="AddAmountViewController" customModule="CountIt" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MIX-IO-Nzr"/>
+                        <viewControllerLayoutGuide type="bottom" id="0LZ-YY-EV1"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yqM-7b-A2s">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bR7-HR-dLU">
+                                <rect key="frame" x="70" y="231" width="235" height="205"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="205" id="dK5-Fe-Mda"/>
+                                    <constraint firstAttribute="width" constant="235" id="jqv-Vr-Wdz"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QCp-VN-1sX">
+                                <rect key="frame" x="166" y="267" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ky-dA-sK2">
+                                <rect key="frame" x="164" y="406" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Done"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="0.29938998287671231" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="bR7-HR-dLU" firstAttribute="centerX" secondItem="yqM-7b-A2s" secondAttribute="centerX" id="OeF-8S-km2"/>
+                            <constraint firstItem="bR7-HR-dLU" firstAttribute="centerY" secondItem="yqM-7b-A2s" secondAttribute="centerY" id="kM7-Ox-3oz"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="label" destination="QCp-VN-1sX" id="rGc-vn-FII"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="o86-vh-cgX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="204" y="-231.63418290854574"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CountAll" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CountIt" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -26,14 +79,56 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="K0q-R6-cCD">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="K0q-R6-cCD" customClass="TableViewCell" customModule="CountIt" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="K0q-R6-cCD" id="NzP-Vg-Kdm">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bbZ-tX-X9j">
+                                                    <rect key="frame" x="8" y="8" width="222" height="23"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sur-Jk-C1t">
+                                                    <rect key="frame" x="321" y="7" width="46" height="26"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="46" id="GF8-Hm-7Yc"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                                    <state key="normal" title="+"/>
+                                                    <connections>
+                                                        <segue destination="NBJ-fi-8JN" kind="presentation" id="Hth-xw-hoO"/>
+                                                    </connections>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G1h-pU-DiT">
+                                                    <rect key="frame" x="283" y="10" width="42" height="23"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="42" id="5TS-y1-DKE"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="sur-Jk-C1t" firstAttribute="trailing" secondItem="NzP-Vg-Kdm" secondAttribute="trailingMargin" id="6Pi-0Y-fII"/>
+                                                <constraint firstItem="G1h-pU-DiT" firstAttribute="centerY" secondItem="sur-Jk-C1t" secondAttribute="centerY" constant="2" id="8Kn-9H-IpU"/>
+                                                <constraint firstItem="bbZ-tX-X9j" firstAttribute="leading" secondItem="NzP-Vg-Kdm" secondAttribute="leadingMargin" id="8OU-aS-Gw1"/>
+                                                <constraint firstItem="bbZ-tX-X9j" firstAttribute="top" secondItem="NzP-Vg-Kdm" secondAttribute="topMargin" id="Ww5-rh-mEg"/>
+                                                <constraint firstItem="sur-Jk-C1t" firstAttribute="leading" secondItem="G1h-pU-DiT" secondAttribute="trailing" constant="-4" id="bbc-eO-bzm"/>
+                                                <constraint firstItem="bbZ-tX-X9j" firstAttribute="top" secondItem="G1h-pU-DiT" secondAttribute="top" constant="-2" id="j66-JY-4cV"/>
+                                                <constraint firstItem="sur-Jk-C1t" firstAttribute="trailing" secondItem="NzP-Vg-Kdm" secondAttribute="trailingMargin" id="jUc-Lq-NzL"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="sur-Jk-C1t" secondAttribute="bottom" constant="2.5" id="jwC-dw-cHe"/>
+                                                <constraint firstItem="G1h-pU-DiT" firstAttribute="leading" secondItem="bbZ-tX-X9j" secondAttribute="trailing" constant="53" id="oDg-Xm-13Q"/>
+                                                <constraint firstItem="bbZ-tX-X9j" firstAttribute="bottom" secondItem="G1h-pU-DiT" secondAttribute="bottom" constant="-2" id="uNs-aK-5m1"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="count" destination="G1h-pU-DiT" id="ueX-uT-aX9"/>
+                                            <outlet property="name" destination="bbZ-tX-X9j" id="Wqh-gd-rwq"/>
                                             <segue destination="i1U-K5-ANt" kind="show" identifier="detailsViewSegue" id="l4d-r1-ylW"/>
                                         </connections>
                                     </tableViewCell>
@@ -70,7 +165,7 @@
         <!--Add View Controller-->
         <scene sceneID="9wM-pp-bvx">
             <objects>
-                <viewController id="hvD-Lp-KmK" customClass="AddViewController" customModule="CountAll" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="hvD-Lp-KmK" customClass="AddViewController" customModule="CountIt" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="USS-nA-DGu"/>
                         <viewControllerLayoutGuide type="bottom" id="F9Q-fa-GET"/>
